Fixed css overlaping issues

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -60,7 +60,7 @@ a {
     width: 550px;
     height: 250px;
     margin-left: 450px;
-    margin-top: -475px;
+    margin-top: -515px;
     padding-top: 50px;
 }
 
